refactor http api pagination
